ghc-4335c07/testsuite/tests/patsyn/should_fail/T9705-2.hs
{-# LANGUAGE PatternSynonyms #-}
class C a where
    method :: a

instance C Int where
    pattern P = ()
